--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -85,6 +85,7 @@
   <string name="DELETE_SURE">Tem certeza que deseja excluir?</string>
   <string name="DELETE_THEME">Remover localização</string>
   <string name="DELETE_THEME_XX">Apagar a localização %s ?</string>
+  <string name="DEVICE">Dispositivo</string>
   <string name="DEVICES_TIPS_TEXT">Etapas do processo:\n1. Conectar o dispositivo à rede\n2. Registrar e ativar a conta\n3. Vincular dispositivo à conta</string>
   <string name="DEVICES_TITLE">Adicionar dispositivo</string>
   <string name="DEVICES_TITLE_1">Conectar ao dispositivo</string>
@@ -272,6 +273,7 @@
   <string name="MON_1">Segunda&#8211;feira</string>
   <string name="MON_2">Seg</string>
   <string name="MSG_BIND">Dispositivo adicionado com sucesso</string>
+  <string name="MSG_BOTTOM_LINE">Fundo</string>
   <string name="MSG_DELETE_TITLE">Depois de excluir, não poderá restaurar. Por favor confirme novamente.</string>
   <string name="MSG_DETAILS">Detalhes</string>
   <string name="MSG_LOW_BATTERY">Bateria fraca. Por favor recarregue o dispositivo</string>
@@ -422,9 +424,11 @@
   <string name="RET_EUPLOADFILE">Falha ao carregar documento</string>
   <string name="RET_EUPLOADFILE_TOOSS">Falha no upload</string>
   <string name="RET_MSG_EDATABASE">Erro no banco de dados</string>
+  <string name="RET_MSG_EUNKNOWN">Erro(%s)</string>
   <string name="RE_ADD_BUTTONG">Adicionar novamente</string>
   <string name="RE_ADD_LABEL">Atualização do dispositivo concluída</string>
   <string name="RIGN_SUC">Registrado com sucesso</string>
+  <string name="Request_TimeOut">Timeout</string>
   <string name="Reset_Suc">Já brilhou em vermelho</string>
   <string name="SAT">Sábado</string>
   <string name="SAT_1">Sábado</string>
@@ -649,6 +653,7 @@
   <string name="Tap1_TitleName">Casa</string>
   <string name="Tap1_Tosetup">Ajustar</string>
   <string name="Tap1_Update">Atualizar</string>
+  <string name="Tap1_UpdateFirmwareTips">Update começará em breve,certifique&#8211;se de que o telefone celular e o dispositivo está se conectando com o mesmo WIFI</string>
   <string name="Tap1_device_deleted">Este dispositivo foi excluído</string>
   <string name="Tap1_iHome_Associate">Associar</string>
   <string name="Tap1_iHome_Associated">Associado</string>
@@ -738,7 +743,7 @@
   <string name="Tap3_ShareDevice_CanceldeTips">Cancelado</string>
   <string name="Tap3_ShareDevice_CancleShare">Claro que para cancelar a partilha com este usuário?</string>
   <string name="Tap3_ShareDevice_Contacts">Contatos</string>
-  <string name="Tap3_ShareDevice_Delete">Interromper o compartilhamento</string>
+  <string name="Tap3_ShareDevice_Delete">Cancelar</string>
   <string name="Tap3_ShareDevice_DeleteSucces">Interompido</string>
   <string name="Tap3_ShareDevice_DeleteTips">Excluir o compartilhamento com o usuário %s ?</string>
   <string name="Tap3_ShareDevice_ExceedTips">Compartilhe com até 5 amigos</string>
@@ -753,7 +758,7 @@
   <string name="Tap3_ShareDevice_SuccessTips">Compartilhado com sucesso</string>
   <string name="Tap3_ShareDevice_Tips">Este dispositivo não pode ser compartilhado com mais todos os usuários</string>
   <string name="Tap3_ShareDevice_ToContacts">Compartilhar com os contatos</string>
-  <string name="Tap3_TitleName">Mina</string>
+  <string name="Tap3_TitleName">Mim</string>
   <string name="Tap3_Uploading">Uploading&#8230;</string>
   <string name="Tap3_UploadingComplete">Upload complete</string>
   <string name="Tap3_UploadingFailed">Upload failed</string>
@@ -840,7 +845,7 @@
   <string name="getting">Obtendo&#8230;</string>
   <string name="has_copy">Copiado</string>
   <string name="has_not_sdcard">Cartão microSD não detectado</string>
-  <string name="help_url">https://yf.jfgou.com:8081/help/pt.html</string>
+  <string name="help_url">https://yf.jfgou.com:8081/helps/pt.html</string>
   <string name="help_url_Doby">https://yf.jfgou.com:8081/help/en_doby.html</string>
   <string name="isStorageLow">microSD sem espaço disponível</string>
   <string name="is_connecting_video">Conectando</string>
