1.忘记密码输入错误6位验证码无反应 2.验证码5分钟过期 3.验证码10分钟内只能3次 4.重置密码前在效验验证码 5.消息中心系统通知icon修改 6.绑定邮箱显示光标 7.亲友详情头像查看修改

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -840,7 +840,7 @@
   <string name="getting">Einen Moment bitte&#8230;</string>
   <string name="has_copy">Kopiert</string>
   <string name="has_not_sdcard">Keine verfügbare Micro SD&#8211;Karte</string>
-  <string name="help_url">https://yf.jfgou.com:8081/help/de.html</string>
+  <string name="help_url">https://yf.jfgou.com:8081/helps/de.html</string>
   <string name="help_url_Doby">https://yf.jfgou.com:8081/help/en_doby.html</string>
   <string name="isStorageLow">Mangel an Speicherplatz</string>
   <string name="is_connecting_video">In Verbindung</string>
