--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -840,7 +840,7 @@
   <string name="getting">Пожалуйста, подождите&#8230;</string>
   <string name="has_copy">Скопировано</string>
   <string name="has_not_sdcard">карта памяти microSD не найдена</string>
-  <string name="help_url">https://yf.jfgou.com:8081/help/ru.html</string>
+  <string name="help_url">https://yf.jfgou.com:8081/helps/ru.html</string>
   <string name="help_url_Doby">https://yf.jfgou.com:8081/help/en_doby.html</string>
   <string name="isStorageLow">На Вашей карте памяти microSD не хватает места</string>
   <string name="is_connecting_video">Подключение к камере</string>
