--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -881,4 +881,6 @@
   <string name="WONDER_TODAY_H_M">今天 HH:mm</string>
   <string name="WONDER_YESTERDAY_H_M">昨天 HH:mm</string>
   <string name="VIDEO_PEER_NOT_EXIST">对端不在线</string>
+  <string name="BIND_FAILED">绑定失败</string>
+  <string name="BIND_NEED_REBIND">设备已经被绑定，确定强绑？</string>
 </resources>
