--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -818,6 +818,8 @@
   <string name="WIFI_SET_3_1">Please via \"Settings\"&#8211;>\"WLAN\", choose \"DOG&#8211;ML&#8211;******\" join on your phone, password 11111111</string>
   <string name="WIFI_SET_4">Return to %s</string>
   <string name="WIFI_SET_5GTIPS">Tips:5G WiFi signal not enabled now</string>
+  <string name="WONDER_TODAY_H_M">Today HH:mm</string>
+  <string name="WONDER_YESTERDAY_H_M">Yesterday HH:mm</string>
   <string name="Word_Hours">Hours</string>
   <string name="XX_DISCOVERY">New discoveries from \"%s\"</string>
   <string name="YOUR_FEEDBACK">You feedback is important to us</string>
