绑定过程，摄像头权限，位置信息权限，GPS开关提示

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -883,4 +883,5 @@
   <string name="web">http://www.jfgou.com</string>
   <string name="wifi_authentication">正在验证%s连接</string>
   <string name="wifi_hasnot">未找到此WiFi网络</string>
+  <string name="CAMERA">摄像头</string>
 </resources>
