--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -888,4 +888,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="NO_MORE">no more</string>
+    <string name="title_activity_config_wifi">ConfigWifiActivity</string>
+    <string name="title_activity_bind_panorama_cam">BindPanoramaCamActivity</string>
 </resources>
