bug修改和优化

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -887,4 +887,7 @@
     <string name="NO_MORE">已经全部加载完毕</string>
     <string name="PERMISSION_AUDIO">麦克风</string>
     <string name="PERMISSION_STORAGE">存储空间</string>
+    <string name="Tap3_Share_NoBindTips">使用分享设备需要绑定手机/邮箱</string>
+    <string name="Phone">电话</string>
+    <string name="SMS">短信</string>
 </resources>
