--- a/app/src/_cell_c/res/values-zh-rCN/strings.xml
+++ b/app/src/_cell_c/res/values-zh-rCN/strings.xml
@@ -2,5 +2,5 @@
 <resources>
     <string name="app_name">Cell_C</string>
     <string name="Slogan">美好生活 智能家居</string>
-    <string name="help_url">https://yf.jfgou.com:8081/help/zh&#8211;rCN_doby.html</string>
+    <string name="help_url">https://%s:8081/help/zh&#8211;rCN_doby.html</string>
 </resources>
