--- a/app/src/_cell_c/res/values/strings.xml
+++ b/app/src/_cell_c/res/values/strings.xml
@@ -3,5 +3,5 @@
 <resources>
     <string name="app_name">Cell_C</string>
     <string name="Slogan">Smart Home, for better life</string>
-    <string name="help_url">https://yf.jfgou.com:8081/help/zh&#8211;rCN_doby.html</string>
+    <string name="help_url">https://%s:8081/help/zh&#8211;rCN_doby.html</string>
 </resources>
